移除查看文件
